samples/_failures_safe/1761156463_824f07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1a3dfed.c: In function ‘main’:
./samples/SAFE/__tmp_a1a3dfed.c:172:9: error: expected expression at end of input
  172 |         {
      |         ^
./samples/SAFE/__tmp_a1a3dfed.c:172:9: error: expected declaration or statement at end of input
